# CommentDMAutomation

./: .deploy-trigger  INSTAGRAM_API_GUIDE.md
backend/: .env.example  config.py  main.py  pyproject.toml  vercel.json
backend/routers/: admin.py  webhook.py
backend/services/: config_manager.py  flow_engine.py  instagram.py
frontend/app/: layout.tsx  page.tsx
frontend/app/automations/[reelId]/: page.tsx
frontend/app/flows/: page.tsx
frontend/components/flow-builder/: FlowEditor.tsx  StepEditor.tsx
frontend/lib/: flow-api.ts
