[project]
name = "comment-dm-automation-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.109.0",
  "uvicorn==0.27.0",
  "requests==2.31.0",
  "python-dotenv==1.0.0",
]

# Explicit entry for Vercel FastAPI detection when Root Directory is `backend`
[project.scripts]
app = "main:app"
